create some migrations and posts pagination
